--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@ckeditor/ckeditor5-react": "^9.1.0",
     "@next/font": "^14.2.15",
     "antd": "^5.22.7",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
