--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/font": "^14.2.15",
     "antd": "^5.22.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "next": "14.2.22",
