--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.22.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "next": "14.2.22",
