--- a/.env.sit
+++ b/.env.sit
@@ -2,4 +2,4 @@ MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=123456aA@
 MYSQL_DATABASE=phuvinh
-BASE_URL=http://14.225.27.200
+NEXT_PUBLIC_API_ENDPOINT=http://14.225.27.200
