--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-build-classic": "^43.1.0",
     "@ckeditor/ckeditor5-react": "^9.1.0",
     "@next/font": "^14.2.15",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "antd": "^5.22.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
