--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.3",
+    "react-typed": "^2.0.12",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1"
   },
